# robot-programming-nc

./: .gitignore  README.md  gitsetup.sh
config/: config.json  rviz_basic_config.rviz  simple_mobile_robot.urdf  tmp
map3D/: CMakeLists.txt  extrude.cpp
planning/: scrum.drawio  structure.drawio  test.drawio
rp_ws/: listen  prj  script.sh
rp_ws/devel/: .catkin  local_setup.sh
rp_ws/devel/lib/mrsim/: mrsim_node  showmap
rp_ws/devel/lib/pkgconfig/: mrsim.pc
rp_ws/devel/share/mrsim/cmake/: mrsim-msg-extras.cmake  mrsim-msg-paths.cmake  mrsimConfig.cmake
rp_ws/launch/: simulation.launch
rp_ws/src/mrsim/: CMakeLists.txt  package.xml
rp_ws/src/mrsim/foo/: showmap.cpp  world3d.cpp
rp_ws/src/mrsim/include/: getgit.h  lidar.h  robot.h  types.h  utils.h  world.h
rp_ws/src/mrsim/launch/: simulation.launch
rp_ws/src/mrsim/src/: getgit.cpp  lidar.cpp  robot.cpp  showmap.cpp  test_path.cpp  utils.cpp  world.cpp
test/: config.cpp  config.json  config.yaml  main  test.cpp  test6
test/foo/: key_handle.cpp  world.cpp
